--- a/.github/workflow/build-dev-completo.yml
+++ b/.github/workflow/build-dev-completo.yml
@@ -2,7 +2,7 @@ name: Build and Deploy with MicroK8s
 
 on:
   push:
-    branches: [dev]
+    branches: [main]
 
 env:
   IMAGE_TAG: ${{ github.event.inputs.image_tag || 'latest' }}
