construir imagen y desplegar en microk8s (k8s.yaml y workflow)

--- a/.github/workflows/build-dev-completo.yml
+++ b/.github/workflows/build-dev-completo.yml
@@ -54,7 +54,7 @@ jobs:
 
   deploy-onpremise:
     name: Deploy on MicroK8s On-Premise
-    runs-on: [self-hosted, linux, dev]
+    runs-on: [self-hosted, Linux, X64]
     needs: build-and-publish
 
     steps:
