--- a/.github/workflows/build-dev-completo.yml
+++ b/.github/workflows/build-dev-completo.yml
@@ -60,6 +60,12 @@ jobs:
     steps:
     - name: Checkout repo
       uses: actions/checkout@v3
+    
+    - name: Configure kubeconfig
+      run: |
+        mkdir -p $HOME/.kube
+        microk8s config > $HOME/.kube/config
+        chmod 600 $HOME/.kube/confi
 
     - name: Apply Kubernetes deployment
       run: microk8s kubectl apply -f k8s.yaml
