--- a/.github/workflows/build-dev-completo.yml
+++ b/.github/workflows/build-dev-completo.yml
@@ -62,9 +62,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Apply Kubernetes deployment
-      run: |
-        microk8s config > $HOME/.kube/config
-        kubectl apply -f k8s.yaml
+      run: sudo microk8s kubectl apply -f k8s.yaml
 
     - name: Restart Kubernetes deployment
-      run: microk8s kubectl rollout restart deployment/proyecto_web -n proyecto_web-dev
+      run: sudo microk8s kubectl rollout restart deployment/proyecto_web -n proyecto_web-dev
